src/test/ui/typeck/issue-81293.stderr
error[E0369]: cannot add `u16` to `usize`
  --> $DIR/issue-81293.rs:6:11
   |
LL |     a = c + b * 5;
   |         - ^ ----- u16
   |         |
   |         usize
   |
help: you can convert a `u16` to a `usize`
   |
LL |     a = c + (b * 5).into();
   |             +     ++++++++

error[E0308]: mismatched types
  --> $DIR/issue-81293.rs:6:13
   |
LL |     a = c + b * 5;
   |             ^^^^^ expected `usize`, found `u16`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
